@@ -84,6 +84,7 @@ BankUIBankCardUpdate.1=&Sil
 BankUIBankCardUpdate.3=Ba\u015Far\u0131yla G\u00FCncellendi\!
 BankUIBankCardUpdate.5=\u0130ptal
 BankUIBankCardUpdate.2=Banka Kart\u0131 G\u00FCncelleme
+BankUIBankCardUpdate.4=Banka Hareketi olan Kart\u0131 Silemezsiniz\!
 BankBLTransactionAdd.0=A\u00E7\u0131l\u0131\u015F De\u011Feri
 BankUIBankCardAbstract.0=Banka Kart\u0131
 BankUIBankCardAbstract.1=Ba\u015Flang\u0131\u00E7 Tarihi
