@@ -1,5 +1,5 @@
 #HSQL database
-#Tue Mar 08 11:06:32 EET 2005
+#Fri Mar 11 16:50:47 EET 2005
 hsqldb.cache_file_scale=1
 runtime.gc_interval=0
 hsqldb.first_identity=0
